--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Printer::Thermal - Interface for Thermal (and some dot-matrix and inkjet) Printe
 
 =head1 VERSION
 
-version 0.22
+version 0.23
 
 =head1 SYNOPSIS
 
@@ -216,8 +216,8 @@ Turns on emphasize(read ESC-POS documentation)
 =head2 font_size
 
 Defined Region
-0 ≤ n ≤ 255
-However, 1 ≤ vertical direction magnification ratio ≤ 8, 1 ≤ horizontal direction magnification ratio ≤ 8
+0 <= n <= 255
+However, 1 <= vertical direction magnification ratio <= 8, 1 <= horizontal direction magnification ratio <= 8
 Initial Value n=0
 Function Specifies the character size (magnification ratio in the vertical and horizontal directions).
 
@@ -288,8 +288,6 @@ Opens the Cash Drawer connected to the thermal printer.
 =head2 test
 
 Prints a bunch of test strings to see if your printer is working fine/connected properly. Don't worry if some things like emphasized and double strike looks the same, it happened with my printer too.
-
-=encoding utf-8
 
 =head1 NOTES
 
