--- a/README.pod
+++ b/README.pod
@@ -2,11 +2,11 @@
 
 =head1 NAME
 
-Printer::Thermal - Interface for Thermal (and some dot-matrix and inkjet) Printers that support ESC-POS specification.
+Printer::Thermal - Interface for Thermal and some dot-matrix and inkjet Printers that support ESC-POS specification.
 
 =head1 VERSION
 
-version 0.25
+version 0.26
 
 =head1 SYNOPSIS
 
